have mobile sized canvas and some mouse events

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
 <head>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-        <script type='text/javascript' src='app.js'></script>
+<link rel='stylesheet' type='text/css' href='style.css'/>
 </head>
 <body>
-    <div id="cont">
-        <canvas id="my_canvas" width="1000px" height="1000px"></canvas>
-    </div>
+        <div id="container">
+            <center>
+        <canvas id="my_canvas" height="640" widht="960" style="border:1px solid #c3c3c3;">
+            Your browser does not support the HTML5 canvas tag. 
+        </canvas>
+                <script type='text/javascript' src='app.js'></script>
+        </center>
+        </div>
 </body>  
 </html>
