Now blank template

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
 <style type="text/css">
-body{ background:black; }
-#my_canvas, #light_canvas{ background:black; 
+body{ background:white; }
+#my_canvas, #light_canvas{ background:white; 
 border:#999 1px solid; }
 
 }
@@ -18,7 +18,7 @@ border:#999 1px solid; }
 </head>
 <body>
 <div id="cont">
-<canvas id="my_canvas" width="1000px" height="300px"></canvas>
+<canvas id="my_canvas" width="640px" height="960px"></canvas>
 
 <h2 id="status"></h2>
 </div>
