add data and test data for json

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ border:#999 1px solid; }
 
 <h2 id="status"></h2>
 </div>
-                <script type='text/javascript' src='app2.js'></script>
+        <script type='text/javascript' src='app2.js'></script>
+		<script type='text/javascript' src='data/orderData.json'></script>
+		<script type='text/javascript' src='data/insectCards.json'></script>
 </body>  
 </html>
