Have basic version working on mobile with all function generated content

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="jquery-1.10.2.js"></script>
         <script src="jcanvas.js"></script>
 <link rel='stylesheet' type='text/css' href='style.css'/>
 
@@ -17,11 +17,11 @@ border:#999 1px solid; }
 </style>
 </head>
 <body>
-<div id="cont">
-<canvas id="my_canvas" width="640px" height="960px"></canvas>
 
-<h2 id="status"></h2>
-</div>
+<canvas id="my_canvas" width="415px" height="625px"></canvas>
+<div id="console">Hello Console</div>
+
+
         <script type='text/javascript' src='app2.js'></script>
 		<script type='text/javascript' src='data/orderData.json'></script>
 		<script type='text/javascript' src='data/insectCards.json'></script>
