--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
         <script src="jquery-1.10.2.js"></script>
         <script src="jcanvas.js"></script>
+        <script src="require.js"></script>
 <link rel='stylesheet' type='text/css' href='style.css'/>
 
     <!-- Responsive and mobile friendly stuff -->
@@ -18,7 +19,8 @@ border:#999 1px solid; }
 </head>
 <body>
 
-<canvas id="my_canvas" width="415px" height="625px"></canvas>
+<!--<canvas id="my_canvas" width="415px" height="625px"></canvas> -->
+<canvas id="my_canvas" width="8000px" height="8000px"></canvas>
 <div id="console">Hello Console</div>
 
 
