--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
 <style type="text/css">
-body{ background:white; }
-#my_canvas, #light_canvas{ background:white; 
-border:#999 1px solid; }
+body{ background:gray; }
+#my_canvas, #light_canvas{ background:gray; 
+border:#999 1px solid; 
+}
 
 }
 </style>
@@ -20,8 +21,8 @@ border:#999 1px solid; }
 <body>
 
 <!--<canvas id="my_canvas" width="415px" height="625px"></canvas> -->
-<canvas id="my_canvas" width="420px" height="640px"></canvas>
-<div id="console">Hello Console</div>
+<canvas id="my_canvas" width="350px" height="560px"></canvas>
+<!-- <div id="console">Hello Console</div> -->
 
 
         <script type='text/javascript' src='app3.js'></script>
