--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
 <style type="text/css">
 body{ background:gray; }
-#my_canvas, #light_canvas{ background:gray; 
+#my_canvas, #light_canvas{ background:#AAD400; 
 border:#999 1px solid; 
 }
 
